--- a/README.asciidoc
+++ b/README.asciidoc
@@ -9,3 +9,8 @@ This is a simple build system inspired by DJB redo (http://cr.yp.to/redo.html).
 
 It's a build system on which you can work with pleasure on Linux and Windows
 and it's implemented using Python3. 
+
+License
+-------
+
+This software is released under the simplified BSD license.
